# plugins3

./: #!.bat  .gitignore  Cargo.toml  README.md  bc  build_plugin  clang+llvm-12.0.1-x86_64-linux-gnu-ubuntu-16.04.tar.xz.sha512sum  find_std  grab-clang  incr-test  ld.lld-12  polyglot_link.bat  toolchain.txt  total-test  total-test.bat  winbuild
.cargo/: config
app/: Cargo.toml  app.rs
header/: Cargo.toml  header.rs
plugin/: Cargo.toml  plugin.rs
toolchain/: README.txt  llvm-dis
toolchain_win/: README.txt
winapp/: Cargo.toml  winapp.rs
